resources/css/stylesheet.css
html {
  font-size: 18px;
  background-size: cover;
}

body {
  color: white;
  font-family: Helvetica, Arial, sans-serif;
  margin: 0px;
  }

#logo {
  background-color: black;
  background-size: cover;
  display: inline-flex;
  align-items: center;
  }

#logo img {
  height: 1.5rem;
  margin-left: 0.5rem;
  margin-right: 1rem;
  display: inline-flex;
  justify-items: center;
}

#logo h3 {
  margin-top: 0.66rem;
  margin-bottom: 0.66rem;
}

h3 {
  font-size: 1rem;
  }

#mainbanner {
  background: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/moto.jpeg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  overflow: visible;
  height: 25rem;
  display: flex;
  align-items: center;
  }

#highlight {
  background-color: black;
  width: 20rem;
  font-weight: bold;
  padding-left: 3rem;
  margin-top: 9rem;
  margin-bottom: auto;
}

#highlight h3 {
  margin-top: 2rem;
  margin-bottom: 0.25rem;
}

#highlight h1 {
  margin-top: 0px;
  margin-bottom: 2rem;
}

#navbar {
  background-color: firebrick;
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  display: inline-flex;
  justify-content: space-between;
  margin: 0px;
  }

#items {
  display: inline-flex;
  margin-top: 3rem;
  margin-bottom: 3rem;
  width: 960px;
  justify-content: space-between;
  }

.item {
  border: 4px solid black;
  width: 30%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-end;
}

.item img {
    height: 9rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
    margin: 2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30%;
    height: auto;
    }

.item-name {
   background-color: black;
   width: 100%;
   text-align: center;
   display: flex;
   justify-content: center;
   }

 #info {
   display: flex;
   width: 960px;
   justify-content: space-between;
   margin-bottom: 4rem;
   }

 #info p {
   color: black;
 }

#location, #hours {
  display: inline-flex;
  flex-direction: column;
  width: 35%;
}

.category {
 background-color: black;
 padding-top: 1rem;
 padding-bottom: 1rem;
 padding-left: 2rem;
 margin: 0px;
 text-align: left;
 }


#logo, #mainbanner, #navbar, #items, #info, footer {
  width: 960px;
  padding-left: 15%;
  padding-right: 15%;
  }

  #container {
    width: 100%;
    overflow: hidden;
  }

footer {
  background-color: black;
  text-align: left;
  height: 5rem;
  }

footer p {
  margin-top: auto;
  margin-bottom: auto;
}

/* Media Queries */

@media only screen and (max-width: 1024px) {

}

